# alphacodium

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements.txt
alpha_codium/: __init__.py  cli.py  config_loader.py  constants.py  review_dataset.py  solve_dataset.py  solve_my_problem.py  solve_problem.py
alpha_codium/algo/: ai_invoker.py
alpha_codium/code_contests/data/: cli.py  etl.py  prepare_and_clean_dataset.py  provider.py  review_dataset.py  review_dataset_no_public.py
alpha_codium/code_contests/eval/: cli.py  code_contests_eval.py  code_contests_metric.py  code_test_runners.py  local_exec.py  pass_at_k_evaluator.py  tester.py  tracer.py
alpha_codium/code_contests/evaluation/: code_contests_eval.py  pass_at_k_evaluator.py
alpha_codium/llm/: ai_handler.py  ai_invoker.py
alpha_codium/log/: __init__.py
alpha_codium/settings/: .secrets_template.toml  choose_best_solution_direct.toml  code_contests_prompt_analyze_and_fix.toml  code_contests_prompt_analyze_and_fix_direct.toml  code_contests_prompt_analyze_failure.toml  code_contests_prompt_more_test_cases.toml  code_contests_prompts.toml  code_contests_prompts_analyze_trace.toml  code_contests_prompts_baseline.toml  code_contests_prompts_choose_best_solution.toml  code_contests_prompts_fix_reflection.toml  code_contests_prompts_fix_solution.toml  code_contests_prompts_generate_ai_tests.toml  code_contests_prompts_generate_possible_solutions.toml  code_contests_prompts_possible_solutions.toml  code_contests_prompts_reflect.toml  code_contests_prompts_solve.toml  code_contests_prompts_solve_direct.toml  code_contests_prompts_validate_ai_tests.toml  configuration.toml
notebooks/: data_exploration.ipynb
sandbox/problems/test_set/11/: public_solution_11.py
(+13 files in other folders)
